# PolyEval

./: .gitmodules  README.md  pyproject.toml  shell.nix
src/polyeval/: __init__.py
src/polyeval/dsl/: node.py  parsing.py
src/polyeval/eval/: evaluation.py  execution.py
src/polyeval/misc/: utils.py
src/polyeval/object/: function.py  output_result.py  question.py  type.py  typed_value.py
tests/: test_parsing.py
tests/data/: example.yaml  hello_world.yaml
