[project]
name = "polyeval"
version = "0.1.0"
description = ""
authors = [
    {name = "hzfsls", email = "2508342095@qq.com"},
]
dependencies = [
    "pyparsing>=3.1.2",
    "pyyaml>=6.0.1",
    "tqdm>=4.66.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
